remove use of convex

--- a/docs/integrations/databases/grafbase.mdx
+++ b/docs/integrations/databases/grafbase.mdx
@@ -25,7 +25,7 @@ Once the Grafbase template is created, you will be redirected to the template's 
   alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard."
 />
 
-The Convex template will pre-populate the default claims required by Grafbase. You can include additional claims as necessary. [Shortcodes](/docs/backend-requests/making/jwt-templates#shortcodes) are available to make adding dynamic user values easy.
+The Grafbase template will pre-populate the default claims required by Grafbase. You can include additional claims as necessary. [Shortcodes](/docs/backend-requests/making/jwt-templates#shortcodes) are available to make adding dynamic user values easy.
 
 <Callout type="info">
   If your GraphQL API restricts access based on groups, you’ll need to specify the users groups in the `groups` claim.
@@ -40,7 +40,7 @@ The Convex template will pre-populate the default claims required by Grafbase. Y
 
 ## Configure Grafbase
 
-The next step is to configure Convex with the issuer domain provided by Clerk. From your Clerk **JWT template** screen, find the **Issuer** input and click to **Copy** the URL.
+The next step is to configure Grafbase with the issuer domain provided by Clerk. From your Clerk **JWT template** screen, find the **Issuer** input, and click to **Copy** the URL.
 
 <Images 
   width={3024}
