Update restrictions with email subaddress blocking
Fixes USR-350

--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -61,6 +61,13 @@ For example, if you add "clerk.dev" as a blocked email domain, it means that any
   In the case you have enabled the Allowlist and the Blocklist and have added the same identifier in both, the Allowlist takes precedence.
 </Callout>
 
+For additional security, adding an individual email address to the Blocklist will also block any
+attempts to sign up with the email address modified to contain a subaddress.
+
+For example, if you add "john.doe@clerk.dev" as a blocked email address, it means that anybody with "john.doe@clerk.dev" email address will not be able to sign up for your application but in addition "john.doe+anything@clerk.dev" will be blocked as well.
+
+Subaddresses are identified by the presense of any of the following characters in the local part of the email address: `+`, `#`, `=`.
+
 ## Other restrictions
 
 ### Block email subaddresses
