Update Remix guide to Remix v2 (#316)
Co-authored-by: Stefanos Anagnostou <anagstef@users.noreply.github.com>

--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -5,7 +5,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 # Use Clerk with Remix
 
-Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application.
+Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application. This guide assumes that you are using Remix v2 or later.
 
 <Steps>
 ### Install `@clerk/remix`
@@ -43,8 +43,8 @@ CLERK_SECRET_KEY={{secret}}
 
 To configure Clerk in your Remix application, you will need to update your root loader. This will enable you to have access to authentication state in any Remix routes.
 
-```tsx filename="app.tsx"
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+```tsx filename="app/root.tsx"
+import type { MetaFunction, LoaderFunction } from "@remix-run/node";
 import {
   Links,
   LiveReload,
@@ -104,7 +104,7 @@ export const loader: LoaderFunction = args => {
 Clerk provides a `ClerkApp` wrapper to provide the authentication state to your React tree. This helper works with Remix SSR out-of-the-box and follows the "higher-order component" paradigm.
 
 ```tsx filename="app/root.tsx"
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+import type { MetaFunction, LoaderFunction } from "@remix-run/node";
 
 import {
   Links,
@@ -157,7 +157,7 @@ Clerk uses short lived tokens to keep your application secure. To refresh expire
 </Callout>
 
 ```tsx filename="app/root.tsx"
-import type { MetaFunction,LoaderFunction } from "@remix-run/node";
+import type { MetaFunction, LoaderFunction } from "@remix-run/node";
 
 import {
   Links,
@@ -169,7 +169,7 @@ import {
 } from "@remix-run/react";
 
 import { rootAuthLoader } from "@clerk/remix/ssr.server";
-import { ClerkApp, V2_ClerkErrorBoundary } from "@clerk/remix";
+import { ClerkApp, ClerkErrorBoundary } from "@clerk/remix";
 
 export const meta: MetaFunction = () => ({
   charset: "utf-8",
@@ -179,7 +179,7 @@ export const meta: MetaFunction = () => ({
 
 export const loader: LoaderFunction = (args) => rootAuthLoader(args);
 // add an Error Boundary
-export const ErrorBoundary = V2_ClerkErrorBoundary();
+export const ErrorBoundary = ClerkErrorBoundary();
 
 function App() {
   return (
@@ -203,23 +203,15 @@ export default ClerkApp(App);
 
 #### Custom Boundary
 
-If you need to add a custom boundary to your application, you can pass it as an argument to the `V2_ClerkErrorBoundary`.
+If you need to add a custom boundary to your application, you can pass it as an argument to the `ClerkErrorBoundary`.
 
 ```tsx filename="app/root.tsx"
 // Imports
 
-// YourBoundary is passed as an argument to V2_ClerkErrorBoundary
-export const ErrorBoundary = V2_ClerkErrorBoundary(YourBoundary);
+// YourBoundary is passed as an argument to ClerkErrorBoundary
+export const ErrorBoundary = ClerkErrorBoundary(YourBoundary);
 
 // Additional application code
-```
-
-#### Catch Boundary
-
-If you have not set the `v2_errorBoundary` future flag to `true`, use the `ClerkCatchBoundary` instead.
-
-```ts filename="app/root.tsx"
-export const CatchBoundary = ClerkCatchBoundary();
 ```
 
 ### Build your own sign-in and sign-up pages
