Migrate hasura from Sanity to MDX

--- a/docs/integrations/databases/grafbase.mdx
+++ b/docs/integrations/databases/grafbase.mdx
@@ -40,7 +40,7 @@ The Grafbase template will pre-populate the default claims required by Grafbase.
 
 ## Configure Grafbase
 
-The next step is to configure Grafbase with the issuer domain provided by Clerk. From your Clerk **JWT template** screen, find the **Issuer** input, and click to **Copy** the URL.
+The next step is to configure Grafbase with the issuer domain provided by Clerk. From your Clerk **JWT template** screen, find the **Issuer** input and click to **Copy** the URL.
 
 <Images 
   width={3024}
