--- a/docs/authentication/social-connections/apple.mdx
+++ b/docs/authentication/social-connections/apple.mdx
@@ -139,7 +139,7 @@ After the registration is finished, go back to configure the newly-created Servi
 
 This configuration screen is where you tell Apple what domain and redirect URIs your application will use. Choose the App ID you created before, and in the domain enter `clerk.<your-domain>`.
 
-Next, go to Clerk's [Dashboard](https://dashboard.clerk.dev/), select your application and instance and go to **Authentication -> Social Connections**. Click the gear icon next to the Apple provider and copy the **Authorized redirect URI** value. Paste the value into the **Return URLs** in Apple Developer Portal and click **Next**.
+Next, go to the [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) page in the Clerk Dashboard. Click the gear icon next to the Apple provider and copy the **Authorized redirect URI** value. Paste the value into the **Return URLs** in Apple Developer Portal and click **Next**.
 
 <Images
   width={704}
