Migrate deployments pages from Sanity to MDX

--- a/docs/deployments/changing-domains.mdx
+++ b/docs/deployments/changing-domains.mdx
@@ -1,5 +1,81 @@
 ---
-sanity_slug: /docs/deployments/change-production-domain
+title: Change domain or subdomain
+description: Learn how to change your production instance's domain or subdomain on Clerk.
 ---
 
-# This is a stub
+# Change domain or subdomain
+
+Learn how to change your production instance's domain or subdomain on Clerk.
+
+## Change domain
+
+Production domains can be changed in the [Clerk Dashboard](https://dashboard.clerk.com/) or via our [backend API](https://clerk.com/docs/reference/backend-api). Once you make the change to your domain, you will need to update the following:
+
+- Update the publishable key
+- Update DNS records
+- Generate new SSL certificates
+- If using social connections, update redirect URLs for enabled social connections
+- If using JWT templates, update JWT issuer and JWKS endpoint in external JWT SSO services
+
+### Update via Clerk Dashboard
+
+To update the production URL from the Clerk Dashboard, navigate to the **Danger** tab of the [Domains](https://dashboard.clerk.com/last-active?path=domains) page and select **Change domain**. 
+
+<Images
+  width={3024}
+  height={1650}
+  src="/docs/images/deployment-guides/change-domain.webp"
+  alt="The 'Danger' tab of the Domains page in the Clerk Dashboard.There is a red arrow pointing to the 'Change domain' button."
+/>
+
+You will receive a prompt to enter your new production domain.
+
+<Images
+  width={3024}
+  height={1650}
+  src="/docs/images/deployment-guides/change-domain-settings.webp"
+  alt="The 'Change domain' modal in the Clerk Dashboard."
+/>
+
+### Update via backend API
+
+To update the production URL using the backend API, you can copy the following cURL code. You will want to replace `YOUR_SECRET_KEY` with your Clerk secret key, which can be found on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard. Then, make sure to update the `home_url` field with your new production URL.
+
+```bash
+curl -XPOST -H 'Authorization: <YOUR_SECRET_KEY>' -H "Content-type: application/json" -d '{
+"home_url": "YOUR_PROD_URL"
+}' 'https://api.clerk.com/v1/instance/change_domain'
+```
+
+For more information on how to update your instance settings using the backend API, see our [backend API reference](https://clerk.com/docs/reference/backend-api/tag/Beta-Features#operation/UpdateInstanceAuthConfig).
+
+## Specify Subdomain
+
+If you would like to specify your subdomain of your application, you can do this from the **Danger** tab of the [Domains](https://dashboard.clerk.com/last-active?path=paths) page in the Clerk dashboard.
+
+<Images
+  width={3024}
+  height={1650}
+  src="/docs/images/deployment-guides/set-subdomain.webp"
+  alt="The 'Danger' tab of the Domains page in the Clerk Dashboard.There is a red arrow pointing to the 'Set subdomain' button."
+/>
+
+## Change subdomain
+
+You can update your subdomain via the Clerk Dashboard. Navigate to the **Danger** tab of the [Domains](https://dashboard.clerk.com/last-active?path=domains) page and select **Change subdomain**. 
+
+<Images
+  width={3024}
+  height={1650}
+  src="/docs/images/deployment-guides/change-subdomain.webp"
+  alt="The 'Danger' tab of the Domains page in the Clerk Dashboard.There is a red arrow pointing to the 'Change subdomain' button."
+/>
+
+You will receive a prompt to enter your new subdomain.
+
+<Images
+  width={3024}
+  height={1650}
+  src="/docs/images/deployment-guides/change-subdomain-settings.webp"
+  alt="The 'Change subdomain' modal in the Clerk Dashboard."
+/>
