--- a/docs/testing/overview.mdx
+++ b/docs/testing/overview.mdx
@@ -1,5 +1,22 @@
 ---
-sanity_slug: /docs/testing/overview
+title: Testing
+description: Learn about testing with Clerk.
 ---
 
-# This is a stub
+# Testing
+
+Testing is an important part of every application. Clerk has built some helpers to make testing your application with Clerk easier, with more on the way. E2E tests should be possible in any framework / setup, however, each framework may require a slightly different setup. If you're having any trouble getting testing to work properly, [send us a message](https://clerk.com/support) and we'll be able to help.
+
+<Callout type="warning">
+  Clerk's APIs do have Rate limits per IP address, you should write your e2e tests in a way that does not sign in on each test, and instead, you should sign in once for all, or most, of your tests
+</Callout>
+
+## Testing with OTPs
+
+To avoid actually sending emails/SMS messages with OTPs during testing, you can use faux-emails that will have fixed verification values. Read the complete documentation [here](https://clerk.com/docs/testing/e2e-testing).
+
+## Testing Frameworks
+
+We've written some tutorials using popular JS testing frameworks. More coming soon.
+
+- [Cypress](/docs/testing/cypress)
