--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -1,7 +1,198 @@
 ---
-sanity_slug: /docs/request-authentication/nodejs-express
+title: Handling requests with Node.js and Express
+description: 
 ---
 
-# This is a stub
+# Handling requests with Node.js and Express
 
-/docs/request-authentication/nodejs-express
+## Node.js and Connect/Express Middleware
+
+The Clerk Node SDK offers two authentication middlewares specifically for [Express](https://expressjs.com/) and Connect/Express compatible frameworks such as [Gatsby](https://www.gatsbyjs.com/docs/reference/functions/middleware-and-helpers/#custom-middleware) and [Fastify](https://www.fastify.io/docs/latest/Reference/Middleware/).
+
+`ClerkExpressWithAuth` is a lax middleware that returns an empty auth object when an unauthenticated request is made.
+
+`ClerkExpressRequireAuth` is a strict middleware that raises an error when an unauthenticated request is made.
+
+## `ClerkExpressWithAuth()`
+
+<CodeBlockTabs options={['JavaScript', 'TypeScript']}>
+  ```js
+  import "dotenv/config"; // To read CLERK_API_KEY
+  import { ClerkExpressWithAuth } from "@clerk/clerk-sdk-node";
+  import express from "express";
+
+  const port = process.env.PORT || 3000;
+
+  const app = express();
+  // Use the lax middleware that returns an empty auth object when unauthenticated
+  app.get(
+    "/protected-endpoint",
+    ClerkExpressWithAuth({
+      // ...options
+    }),
+    (req, res) => {
+      res.json(req.auth);
+    }
+  );
+
+app.listen(port, () => {
+  console.log(`Example app listening at http://localhost:${port}`);
+});
+  ```
+
+  ```typescript
+  import "dotenv/config"; // To read CLERK_API_KEY
+  import {
+    ClerkExpressWithAuth,
+    LooseAuthProp,
+    WithAuthProp,
+  } from '@clerk/clerk-sdk-node';
+  import express, { Application, Request, Response } from 'express';
+
+  const port = process.env.PORT || 3000;
+
+  const app: Application = express();
+
+  declare global {
+    namespace Express {
+      interface Request extends LooseAuthProp {}
+    }
+  }
+
+  // Use the lax middleware that returns an empty auth object when unauthenticated
+  app.get(
+    '/protected-route',
+    ClerkExpressWithAuth({
+      // ...options
+    }),
+    (req: WithAuthProp<Request>, res: Response) => {
+      res.json(req.auth);
+    }
+  );
+
+  app.use((err, req, res, next) => {
+    console.error(err.stack);
+    res.status(401).send('Unauthenticated!');
+  });
+
+  app.listen(port, () => {
+    console.log(`Example app listening at http://localhost:${port}`);
+  });
+  ```
+</CodeBlockTabs>
+
+## `ClerkExpressRequireAuth()`
+
+<CodeBlockTabs options={['JavaScript', 'TypeScript']}>
+  ```js
+  import "dotenv/config"; // To read CLERK_API_KEY
+  import { ClerkExpressRequireAuth } from '@clerk/clerk-sdk-node';
+  import express from 'express';
+
+  const port = process.env.PORT || 3000;
+  const app = express();
+
+  // Use the strict middleware that raises an error when unauthenticated
+  app.get(
+    '/protected-endpoint',
+    ClerkExpressRequireAuth({
+      // ...options
+    }),
+    (req: RequireAuthProp<Request>, res) => {
+      res.json(req.auth);
+    }
+  );
+
+  app.use((err, req, res, next) => {
+    console.error(err.stack);
+    res.status(401).send('Unauthenticated!');
+  });
+
+  app.listen(port, () => {
+    console.log(`Example app listening at http://localhost:${port}`);
+  });
+
+  
+  ```
+
+  ```typescript
+  import "dotenv/config"; // To read CLERK_API_KEY
+import {
+  ClerkExpressRequireAuth,
+  RequireAuthProp,
+  StrictAuthProp,
+} from '@clerk/clerk-sdk-node';
+import express, { Application, Request, Response } from 'express';
+
+const port = process.env.PORT || 3000;
+const app: Application = express();
+
+declare global {
+  namespace Express {
+    interface Request extends StrictAuthProp {}
+  }
+}
+
+// Use the strict middleware that raises an error when unauthenticated
+app.get(
+  '/protected-route',
+  ClerkExpressRequireAuth({
+    // ...options
+  }),
+  (req: RequireAuthProp<Request>, res) => {
+    res.json(req.auth);
+  }
+);
+
+app.use((err, req, res, next) => {
+  console.error(err.stack);
+  res.status(401).send('Unauthenticated!');
+});
+
+app.listen(port, () => {
+  console.log(`Example app listening at http://localhost:${port}`);
+});
+
+  ```
+</CodeBlockTabs>
+
+### Express Error Handlers
+Express comes with a default error handler for errors encountered in the middleware chain.
+
+Developers can also implement their own custom error handlers as detailed in the [Express error handling guide](https://expressjs.com/en/guide/error-handling.html). An example error handler can be found above.
+
+If you are using the strict middleware variant, the err pass to your error handler will contain enough context for you to respond as you deem fit.
+
+## Middleware options
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
+  rows={[
+    {
+      cells: [
+        <code>authorizedParties</code>, 
+        <code>*string[]*</code>, 
+        <code>Validate that the azp claim in the Clerk Session JWT equals any of your known Origins that are permitted to generate those tokens. This is an extra security check that we highly recommend that you do.
+        For more information refer to Manual JWT Verification.</code>
+      ],
+    },
+    {
+      cells: [
+        <code>jwtKey</code>,
+        <code>*string*</code>,
+        <code>Clerk's JWT session token can be verified in a networkless manner using the JWT verification key.
+        By default, Clerk will use our well-known JWKs endpoint to fetch and cache the key for any subsequent token verification. If you use the CLERK_JWT_KEY environment variable or the jwtKey option to supply the key, Clerk will pick it up and do networkless verification for session tokens using it.
+        For more information refer to Networkless Token Verification.
+        </code>
+      ],
+    },
+    {
+      cells: [
+        <code>onError</code>,
+        <code>*(error: ClerkAPIResponseError) => unknown*</code>,
+        <code>This function can act as a custom error handler tailored to the needs of your application.</code>
+      ],
+    },
+  ]}
+/>
