fix: Correct spelling of sign-in and sign-up

--- a/docs/account-portal/direct-links.mdx
+++ b/docs/account-portal/direct-links.mdx
@@ -57,10 +57,12 @@ Specify the fallback redirects under **Account Portal -> Redirects** in the Cler
 
 ## Prefill sign in and sign up fields
 
-In the case of direct links, the values to be used for prefilling the fields for sign in/up can be specified via the following query parameters:
+In the case of direct links, the values to be used for prefilling the fields for sign-in or sign-up can be specified via the following query parameters:
 
 * `email_address`
 * `phone_number`
 * `username`
 * `first_name`
 * `last_name`
+
+For example, visiting `https://accounts.example.com/sign-in?username=nick` will result in the username field being prefilled with the value `nick`.
