--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -161,7 +161,7 @@ All props below are optional.
       cells: [
         <code>initialValues</code>,
         <code>object</code>,
-        <>The values used to prefill the sign in fields with.</>,
+        <>The values used to prefill the sign-in fields with.</>,
       ],
     },
   ]}
