--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -108,4 +108,4 @@ All props below are optional.
 | `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
 | `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
 | `unsafeMetadata` | `object` | An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. `{ "company": "companyID1234" }` |
-| `initialValues` | `object` | The values used to prefill the sign in fields with. |
+| `initialValues` | `object` | The values used to prefill the sign-in fields with. |
