--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -28,7 +28,7 @@ Magic link flows can be completed on the same device that they were initiated or
 
 The `handleMagicLinkVerification()` method takes care of finalizing the magic link flow, depending on the verification outcome.
 
-Upon successful verification, the method will figure out if the sign in or sign up attempt was completed and redirect the user accordingly. As such, it accepts different parameters for the URL it should redirect when sign in/up is completed and the URL which it should redirect when the sign in/up attempt is still pending. Both parameters are optional, but you can provide them to the method up front. The final redirect will depend on the sign in/up attempt's status.
+Upon successful verification, the method will figure out if the sign in or sign up attempt was completed and redirect the user accordingly. As such, it accepts different parameters for the URL it should redirect when sign-in or sign-up is completed and the URL which it should redirect when the sign-in or sign-up attempt is still pending. Both parameters are optional, but you can provide them to the method up front. The final redirect will depend on the sign-in or sign-up attempt's status.
 
 Additionally, the `handleMagicLinkVerification()` method allows you to execute a callback if the successful verification happened on another device.
 
