feat: Add initialValues prop to sign in/up redirect methods/components

--- a/docs/components/control/redirect-to-signup.mdx
+++ b/docs/components/control/redirect-to-signup.mdx
@@ -114,6 +114,13 @@ export default function Index() {
         <code>string</code>,
         <>Full URL or path to navigate after successful sign up.</>,
       ],
-    }
+    },
+    {
+      cells: [
+        <code>initialValues</code>,
+        <code>SignUpInitialValues</code>,
+        <>The values used to prefill the sign-up fields with.</>,
+      ],
+    },
   ]}
 />
