--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -51,7 +51,7 @@ Redirects to the provided url after decorating it with the auth token for develo
 ## `redirectToSignIn()`
 
 ```typescript
-function redirectToSignIn(options?: RedirectOptions): Promise<unknown>;
+function redirectToSignIn(options?: SignInRedirectOptions): Promise<unknown>;
 ```
 
 Redirects to the sign-in URL, as configured in your Instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
@@ -72,7 +72,7 @@ Redirects to the sign-in URL, as configured in your Instance settings. This meth
 ## `redirectToSignUp()`
 
 ```typescript
-function redirectToSignUp(options?: RedirectOptions): Promise<unknown>;
+function redirectToSignUp(options?: SignUpRedirectOptions): Promise<unknown>;
 ```
 
 Redirects to the sign-up URL, as configured in your Instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
