--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -113,6 +113,13 @@ export default function Index() {
         <code>string</code>,
         <>Full URL or path to navigate after successful sign up.</>,
       ],
-    }
+    },
+    {
+      cells: [
+        <code>initialValues</code>,
+        <code>SignInInitialValues</code>,
+        <>The values used to prefill the sign-in fields with.</>,
+      ],
+    },
   ]}
 />
