--- a/docs/references/javascript/types/sign-up-redirect-options.mdx
+++ b/docs/references/javascript/types/sign-up-redirect-options.mdx
@@ -1,11 +1,11 @@
 ---
-title: RedirectOptions
-description: Interfaces that provides options for a range of redirect methods.
+title: SignUpRedirectOptions
+description: An interface that provides options for a range of redirect methods.
 ---
 
-# `RedirectOptions`
+# `SignUpRedirectOptions`
 
-An interface that provides options for a range of redirect methods.
+An interface that provides options for sign-up redirect methods.
 
 ## Attributes
 
@@ -29,5 +29,10 @@ An interface that provides options for a range of redirect methods.
         <>Full URL or path to navigate after successful sign in, or sign up.<br/>The same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code>
 to the same value.</>
         ]},
+    {cells: [
+        <code>initialValues</code>,
+        <code>SignUpInitialValues</code>,
+        <>The values used to prefill the sign-up fields with.</>,
+      ]},
     ]}
 />
