clarify on keys needed for ClerkJS setup

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -61,7 +61,7 @@ At the root of your project, install the ClerkJS package using your package mana
 
 ### Set environment keys
 
-To use the ClerkJS package, you'll need an [API Key and frontend API URL from the Clerk dashboard](https://dashboard.clerk.dev/last-active?path=api-keys). If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+To use the ClerkJS package, you'll need to copy your **Publishable Key** from the [API Keys](https://dashboard.clerk.dev/last-active?path=api-keys) page in the Clerk Dashboard. On this same page, click on the **Advanced** dropdown and copy your **Frontend API URL**. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
@@ -76,13 +76,13 @@ CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
 
 ### Setup the Clerk class
 
-To use the ClerkJS package, you'll need to initialize the Clerk class with your frontend API URL and publishable key.
+To use the ClerkJS package, you'll need to initialize the Clerk class with your **Publishable key**.
 
 <CodeBlockTabs options={['npm Package', 'script Tag']}>
 ```js filename="index.js"
 import Clerk from '@clerk/clerk-js';
 
-const clerkFrontendApi = `pk_{{pub_key}}`;
+const clerkFrontendApi = `{{pub_key}}`;
 const clerk = new Clerk(clerkFrontendApi);
 await clerk.load({
   // Set load options here...
