move comment for better readability; fix typo; include parens in component reference

--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -10,9 +10,10 @@ The `useOrganization()` hook gives you access to the current active organization
 ```jsx
 type useOrganizationParams = {
   invitationList: {
+    // Pagination params
     limit?: number;
     offset?: number;
-    }, // Pagination params
+    },
   membershipRequests: true
     | (commonPaginationParams & {
         status?: OrganizationInvitationStatus; // e.g. "pending"
@@ -23,7 +24,7 @@ type useOrganizationParams = {
       });
   domains: true
     | (commonPaginationParams & {
-        enrollmentMode?: OrganizationEnrollmentMode; // e.g. "auomatic_invitation"
+        enrollmentMode?: OrganizationEnrollmentMode; // e.g. "automatic_invitation"
       });
 };
 
@@ -71,7 +72,7 @@ In addition, we support a paginated response with page fetching helper functions
   Make sure you've followed the installation guide for [Clerk React](/docs/references/react/overview) before running the snippets below.
 </Callout>
 
-In the following example, `useOrganization` is used to map over the `memberships` of the current active organization and present membership attributes. In addition, buttons support navigating through the paginated response.
+In the following example, `useOrganization()` is used to map over the `memberships` of the current active organization and present membership attributes. In addition, buttons support navigating through the paginated response.
 
 <Callout type="info">
   Note that your component must be a descendant of [`<ClerkProvider/>`](/docs/components/clerk-provider).
