--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -61,7 +61,7 @@ At the root of your project, install the ClerkJS package using your package mana
 
 ### Set environment keys
 
-To use the ClerkJS package, you'll need to copy your **Publishable Key** from the [API Keys](https://dashboard.clerk.dev/last-active?path=api-keys) page in the Clerk Dashboard. On this same page, click on the **Advanced** dropdown and copy your **Frontend API URL**. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+To use the ClerkJS package, you'll need to copy your **Publishable Key** from the [API Keys](https://dashboard.clerk.dev/last-active?path=api-keys) page in the Clerk Dashboard. On this same page, click on the **Advanced** dropdown and copy your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible.
 
 <InjectKeys>
 
